--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "test": "tests"
   },
   "scripts": {
-    "test": "nightwatch"
+    "test": "nightwatch --env phantom"
   },
   "repository": {
     "type": "git",
