--- a/package.json
+++ b/package.json
@@ -24,7 +24,9 @@
     "jstransformer": "^1.0.0",
     "nightwatch": "latest",
     "nightwatch-html-reporter": "^1.0.6",
-    "pug": "^0.1.0"
+    "node-outlook": "^1.1.6",
+    "pug": "^0.1.0",
+    "simple-oauth2": "^0.8.0"
   },
   "author": "Uche Onwudiwe",
   "license": "ISC",
