--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nightwatch-html-reporter": "^1.0.6",
     "node-outlook": "^1.1.6",
     "pug": "^0.1.0",
+    "selenium-webdriver": "^2.53.3",
     "simple-oauth2": "^0.8.0"
   },
   "author": "Uche Onwudiwe",
